--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  text-align: center;
   display: flex;
+  text-align: center;
 }
 
 .login-box {
@@ -23,4 +23,28 @@
   right: 0;
   /* best to keep at a static width? */
   width: 500px;
+}
+
+.library-view {
+  display: flex;
+  flex-direction: column;
+}
+
+#side-menu {
+  background-color: lightgrey;
+  box-shadow: -2px 0px 5px black;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: flex-start;
+  overflow: auto;
+  position: fixed;
+  right: 0;
+  width: 30%;
+  font-size: 20px;
+}
+
+.side-menu-description {
+  text-align: justify;
+  padding: 0 20px;
 }
